apps/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:plex.lab.emc2.build
    traefik.port: '32400'
  labels:
    app: plex
  name: plex
  namespace: media
spec:
  selector:
    matchLabels:
      app: plex
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traefik.enable: 'true'
        traefik.frontend.rule: Host:plex.lab.emc2.build
        traefik.port: '32400'
      labels:
        app: plex
    spec:
      containers:
      - env:
        - name: ADVERTISE_IP
          value: "http://192.168.10.90:32400/,https://plex.lab.emc2.build/"
        - name: PLEX_CLAIM
          value: "claim-hoRxbRAaXFsmUztPFrBa"
        - name: PGID
          value: '1000'
        - name: PUID
          value: '1000'
        - name: TZ
          value: America/Vancouver
        - name: version
          value: latest
        # - name: PLEX_EXTERNAL_URL
        #   value: "https://plex.lab.emc2.build/"
        # - name: PLEX_INTERNAL_URL
        #   value: "http://192.168.10.90:32400/"
        # - name: PLEX_SERVER_APPLICATION_URL
        #   value: "https://plex.lab.emc2.build/"
        # - name: PLEX_SERVER_PREFERRED_SECURE_CONNECTION
        #   value: "1"
        # - name: PLEX_SERVER_USE_INSECURE_CONNECTION
        #   value: "0"
        # - name: PLEX_SERVER_NETWORK_ACCESS_URL
        #   value: "https://plex.lab.emc2.build/"
        # - name: PLEX_SERVER_EXTERNAL_URL
        #   value: "https://plex.lab.emc2.build/"
        # - name: PLEX_SERVER_INTERNAL_URL
        #   value: "http://192.168.10.90:32400/"
        image: lscr.io/linuxserver/plex:latest
        imagePullPolicy: IfNotPresent
        name: plex
        ports:
        - containerPort: 32400
        - containerPort: 1900
          protocol: UDP
        - containerPort: 3005
        - containerPort: 5353
          protocol: UDP
        - containerPort: 8324
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: "4"
            memory: 2Gi
        volumeMounts:
        - mountPath: /config
          name: plex-config
        - mountPath: /tv
          name: media-library
          subPath: tv
        - mountPath: /movies
          name: media-library
          subPath: movies
        - mountPath: /music
          name: media-library
          subPath: music
        # - mountPath: /downloads
        #   name: media-library
        #   subPath: downloads
      #hostNetwork: true
      hostname: plex
      restartPolicy: Always
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 60
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "1"
      volumes:
      - name: plex-config
        persistentVolumeClaim:
          claimName: plex-config
      - name: media-library
        persistentVolumeClaim:
          claimName: media-library
