apps/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: plex
  namespace: media
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - plex.lab.emc2.build
    secretName: plex-letsencrypt-tls
  rules:
  - host: plex.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: plex
            port:
              number: 32400
        path: /
        pathType: Prefix
